# RubiksCubeSolver

./: CMakeLists.txt  GenericRubiksCube.cpp  main.cpp
Model/: GenericRubiksCube.h  RubiksCube3dArray.cpp
Solver/: BFSSolver.h  DFSSolver.h  IDAstarSolver.h  IDDFSSolver.h
